# igvc-autonav-sim

./: .gitignore  readme.md  rvizconfig.rviz
auto_nav/: package.xml
auto_nav/params/: global_costmap_params.yaml  local_costmap_params.yaml
src/Mapping/: README.md  rtab_mapping.launch
src/auto_nav/launch/: auto_nav.launch
src/auto_nav/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/auto_nav/params/params_backup/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
src/auto_nav/rviz/: rvizconfig2.rviz
src/auto_nav2/: CMakeLists.txt  package.xml
src/auto_nav2/backup_params/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/auto_nav2/launch/: move_base.launch
src/auto_nav2/params/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/auto_nav2/rviz/: rvizconfig1.rviz  rvizconfig2.rviz
src/auto_nav2/src/: pub_goal.cpp
src/custom_obstacle_detector/: CMakeLists.txt  package.xml
src/custom_obstacle_detector/src/: detector.py  detector2.py
src/filter_pc/: CMakeLists.txt  package.xml
src/filter_pc/src/: compensatedfullnode.cpp  dynamic_costmap_node.cpp  filtermap.py  filternode.py  fullnode.cpp  fullnode.py  fullnode_backup.cpp  mapnode.py  processmap.cpp  rotatenode.py  vectorizedfullnode.py
src/goal_gen/: CMakeLists.txt  package.xml
src/goal_gen/src/: coordtransformer.py  goal_gen_node.cpp  goalcalculator.py  goalcalculator2.py  goalnode.py
src/lane_detector/: CMakeLists.txt  package.xml
src/lane_detector/src/: lanedetector.cpp
src/mapnode/: CMakeLists.txt  package.xml
src/mapnode/launch/: map_server.launch  move_base.launch
src/mapnode/maps/: map.yaml
src/mapnode/params/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
src/mapnode/rviz/: map.rviz  navigation.rviz
src/mapping/: CMakeLists.txt  package.xml
src/mapping/src/: redirect_scans.cpp
src/mapping/src/launch/: map.launch
src/mapping2/: CMakeLists.txt  package.xml
src/mapping2/launch/: octomaplauncher.launch
src/navigation/: CMakeLists.txt  package.xml
src/navigation/launch/: move_base_launch.launch  nav.launch
src/navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/navigation/src/: gps.cpp
